--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
     "bootstrap": "^5.1.1",
     "dotenv-safe": "^8.2.0",
     "next": "^11.0.0",
+    "next-redux-wrapper": "^7.0.5",
+    "null-loader": "^4.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.43.2"
   }
 }
