--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.16.13",
     "bootstrap": "^5.1.1",
     "dotenv-safe": "^8.2.0",
     "next": "^11.0.0",
     "next-redux-wrapper": "^7.0.5",
+    "node-sass": "^6.0.1",
     "null-loader": "^4.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
